# glfw_project

./: CMakeLists.txt
Backup/2025-feb-src/src/render/: Triangle.cpp
Source/: Main.cpp
backup/2025-feb-src/src/: Main.cpp
src/: Main.cpp  main.cpp  main.cpp.bak
src/render/: Triangle.h
